--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 								placeholder="Buscar productos..."
 								aria-label="Buscar producto"
 							/>
-							<button class="btn btn-secondary" type="button">
+							<button class="btn btn-secondary" type="submit">
 								<i class="bi bi-search"></i>
 							</button>
 							<button
@@ -107,6 +107,6 @@
 			integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
 			crossorigin="anonymous"
 		></script>
-		<script src="js/app.js"></script>
+		<script type="module" src="app/app.js"></script>
 	</body>
 </html>
