--- a/index.html
+++ b/index.html
@@ -13,9 +13,15 @@
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css" />
 		<title>Mercado Gris</title>
 	</head>
-	<body>
-        <div id="loading_bar" class="progress rounded-0 fixed-bottom d-none">
-            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%"></div>
+	<body>   
+        <div class="modal" id="modalCargando" tabindex="-1" aria-labelledby="modalCargando" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered">
+                <div class="modal-content">
+                    <div class="modal-body text-center">
+                        <p class="pt-3"><img src="assets/img/loading.gif" alt="Cargando" class="me-3" style="opacity: 70%; width: 30px;">Cargando contenido. Por favor espere...</p>
+                    </div>
+                </div>
+            </div>
         </div>
 		<header class="text-bg-dark sticky-top bg-secondary pt-3">
 			<div class="container-xxl">
@@ -49,7 +55,7 @@
 					</div>
 				</div>
 			</div>
-            <nav class="navbar navbar-expand-sm navbar-dark bg-secondary pb-0">
+            <nav class="navbar navbar-expand navbar-dark bg-secondary pb-0">
                 <div class="container-fluid justify-content-center">
                     <ul class="navbar-nav fw-light text-center">
                         <li class="nav-item mx-2">
@@ -80,35 +86,22 @@
 
                     <div class="d-flex justify-content-between mb-5">
                         <h5 class="text-secondary">Total</h5>
-                        <h5>$ <span id="suma">321.000</span></h5>
+                        <h5>$ <span id="suma"></span></h5>
                     </div>
                 </div>
 			</div>
 		</div>
-
-        <div id="loading" class="p-5 m-5 text-center text-secondary d-none">
-            <img src="/assets/img/loading.svg" alt="">
-            <p><small>Cargando contenido... Por favor espere.</small></p>
-        </div>
-
 		<main class="album">
 			<div class="container-xxl pt-4 pb-3">
 				<div id="container" class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+                    <p>Cargando contenido...</p>
                     <!-- contenido cargado desde javascript -->
                 </div>
 			</div>
 		</div>
-        <!--
-        <nav aria-label="Page navigation example">
-            <ul class="pagination pagination justify-content-center">
-                <li class="page-item"><a class="page-link" href="#">1</a></li>
-                <li class="page-item active" aria-current="page">
-                    <span class="page-link bg-secondary border-0">2</span>
-                </li>
-                <li class="page-item"><a class="page-link" href="#">3</a></li>
-            </ul>
-        </nav>
-        -->
+		<nav id="paginado">
+			
+		</nav>
 		<footer class="text-muted small py-2">
 			<div class="container-xxl">
 				<p class="text-secondary text-center pb-2">
@@ -117,7 +110,7 @@
 				<p class="float-end">
 					<a href="#">Volver arriba</a>
 				</p>
-				<p>Somos <strong>Mercado Gris</strong>, la plataforma más grande de productos aftermarket, OEM y refurbished.</p>
+				<p>Somos la plataforma más grande de comercio en línea de productos aftermarket, OEM y refurbished.</p>
 			</div>
 		</footer>
 		<script
