Integración con API de Mercado Pago y correciones menores

--- a/index.html
+++ b/index.html
@@ -83,11 +83,11 @@
 				</ul>
                 <div id="total" class="d-none">
                     <hr class="my-4" />
-
-                    <div class="d-flex justify-content-between mb-5">
+                    <div class="d-flex justify-content-between mb-4">
                         <h5 class="text-secondary">Total</h5>
                         <h5>$ <span id="suma"></span></h5>
                     </div>
+                    <button id="comprar" class="btn btn-primary w-100 py-2"><i class="bi bi-cart-check-fill me-1"></i> Comprar</button>
                 </div>
 			</div>
 		</div>
@@ -100,13 +100,10 @@
 			</div>
 		</div>
 		<nav id="paginado">
-			
+			<!-- contenido cargado desde javascript -->
 		</nav>
 		<footer class="text-muted small py-2">
 			<div class="container-xxl">
-				<p class="text-secondary text-center pb-2">
-					
-                </p>
 				<p class="float-end">
 					<a href="#">Volver arriba</a>
 				</p>
